--- a/historico.html
+++ b/historico.html
@@ -1,32 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <title>Histórico de WIN</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Histórico</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body onload="carregarHistorico()">
   <header>
-    <h1>Histórico de WIN</h1>
+    <h1>Histórico de Validações</h1>
     <nav>
       <a href="validador.html">Validador</a>
-      <a href="login.html">Terminar Sessão</a>
+      <a href="perfil.html">Perfil</a>
     </nav>
   </header>
   <main>
-    <h2>Registos anteriores</h2>
-    <table class="win-table">
+    <table id="historicoTable">
       <thead>
         <tr>
           <th>Data</th>
-          <th>WIN</th>
+          <th>WIN / HIN / N.º CASCO</th>
           <th>Resultado</th>
           <th>Justificação</th>
+          <th>Fotografia</th>
         </tr>
       </thead>
-      <tbody id="historicoBody"></tbody>
+      <tbody></tbody>
     </table>
   </main>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
