--- a/login.html
+++ b/login.html
@@ -4,26 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login - WIN Validator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">WIN Validator</div>
+        <h1>Validador de Números WIN</h1>
     </header>
 
-    <main class="container">
-        <form id="loginForm" class="form-box">
-            <h2>Iniciar Sessão</h2>
-            <label for="username">Utilizador:</label>
-            <input type="text" id="username" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" required>
-
+    <div class="login-container">
+        <form onsubmit="return validarLogin()">
+            <input type="text" id="username" placeholder="Utilizador" required>
+            <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Entrar</button>
         </form>
-    </main>
+    </div>
 
     <script src="script.js"></script>
 </body>
