--- a/validador.html
+++ b/validador.html
@@ -1,27 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Validador WIN</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Validador WIN</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Validador WIN</h1>
-    <nav>
-      <a href="historico.html">Histórico</a>
-      <a href="perfil.html">Perfil</a>
-    </nav>
-  </header>
-  <main>
-    <form onsubmit="validarWIN(); return false;">
-      <input type="text" id="winInput" placeholder="Introduz o número WIN" />
-      <button type="submit">Validar</button>
-    </form>
-    <div id="resultadoValidacao"></div>
-  </main>
-  <script src="script.js" defer></script>
+    <header>
+        <h1>Validador WIN / HIN</h1>
+    </header>
+    <main>
+        <input type="text" id="winInput" placeholder="Insere o número WIN">
+        <button onclick="validarWIN()">Validar</button>
+        <div id="resultado"></div>
+        <div id="detalhesValidacao"></div>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
