--- a/login.html
+++ b/login.html
@@ -2,24 +2,23 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - WIN Validator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="header">
-        <h1>Validador de Números WIN</h1>
+    <header>
+        <h1>Validador WIN</h1>
     </header>
-
-    <div class="login-container">
+    <main class="login-container">
         <form onsubmit="return validarLogin()">
-            <input type="text" id="username" placeholder="Utilizador" required>
-            <input type="password" id="password" placeholder="Password" required>
+            <h2>Iniciar Sessão</h2>
+            <input type="text" id="username" placeholder="Utilizador" required />
+            <input type="password" id="password" placeholder="Password" required />
             <button type="submit">Entrar</button>
         </form>
-    </div>
-
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
