--- a/historico.html
+++ b/historico.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <title>Histórico</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Histórico WIN</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Histórico de Verificações</h1>
-    </header>
-    <main>
-        <table id="tabelaHistorico">
-            <thead>
-                <tr>
-                    <th>Data</th>
-                    <th>WIN / HIN / Nº CASCO</th>
-                    <th>Resultado</th>
-                    <th>Justificação</th>
-                    <th>Foto</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </main>
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>Histórico de Verificações</h1>
+    <table id="historicoTable">
+      <thead>
+        <tr>
+          <th>Data</th>
+          <th>WIN</th>
+          <th>Resultado</th>
+          <th>Justificação</th>
+          <th>Foto</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 </body>
 </html>
