--- a/historico.html
+++ b/historico.html
@@ -21,6 +21,9 @@
       </thead>
       <tbody></tbody>
     </table>
+    <br>
+    <button onclick="window.location.href='validador.html'">Voltar ao Validador</button>
+    <button onclick="window.location.href='login.html'">Sair</button>
   </div>
 </body>
 </html>
