--- a/validador.html
+++ b/validador.html
@@ -13,6 +13,9 @@
     <button onclick="validarWIN()">Validar</button>
     <div id="resultado"></div>
     <div id="detalhes"></div>
+    <br>
+    <button onclick="window.location.href='historico.html'">Ver Histórico</button>
+    <button onclick="window.location.href='login.html'">Sair</button>
   </div>
 </body>
 </html>
