--- a/validador.html
+++ b/validador.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -10,30 +9,32 @@
     .valido { color: green; font-weight: bold; }
     .invalido { color: red; font-weight: bold; }
     .secao { border: 1px solid #ccc; padding: 15px; margin-top: 15px; border-radius: 10px; }
-    .feedback-table { border-collapse: collapse; margin-top: 10px; }
-    .feedback-table td, .feedback-table th { border: 1px solid #ccc; padding: 5px 10px; }
+    .feedback-table { border-collapse: collapse; width: 100%; margin-top: 10px; }
+    .feedback-table td, .feedback-table th { border: 1px solid #ccc; padding: 5px 10px; text-align: left; }
     button { margin-right: 10px; margin-top: 10px; }
+    input, select { padding: 5px; margin-top: 5px; }
   </style>
 </head>
-<body>
+<body onload="mostrarSecao('win')">
   <h2>Validador de Identificação de Embarcações</h2>
   <button onclick="mostrarSecao('win')">Validar WIN</button>
   <button onclick="mostrarSecao('motor')">Validar Motor</button>
-  <button onclick="window.location.href='login.html'">Logout</button>
+  <button onclick="logout()">Logout</button>
 
   <!-- Seção WIN -->
   <div id="secaoWin" class="secao">
     <h3>Validador WIN</h3>
-    <input type="text" id="winInput" placeholder="Introduz número WIN" size="40">
+    <input type="text" id="winInput" placeholder="Introduz número WIN (14 ou 16 caracteres)" size="40">
     <button onclick="validarWIN()">Validar</button>
-    <button onclick="window.location.href='historico_win.html'">Ver Histórico WIN</button>
+    <button onclick="mostrarHistoricoWIN()">Ver Histórico WIN</button>
     <div id="resultadoWIN"></div>
+    <div id="historicoWIN" class="hidden"></div>
   </div>
 
   <!-- Seção Motor -->
   <div id="secaoMotor" class="secao hidden">
     <h3>Validador de Motor</h3>
-    <label>Marca:</label>
+    <label for="marca">Marca:</label><br>
     <select id="marca" onchange="mostrarCamposMotor()">
       <option value="">-- Selecionar marca --</option>
       <option value="Yamaha">Yamaha</option>
@@ -41,96 +42,115 @@
       <option value="MercuryIn">Mercury (Inboard)</option>
       <option value="MercuryOut">Mercury (Outboard)</option>
       <option value="Suzuki">Suzuki</option>
-    </select><br>
-
+    </select>
     <div id="camposMotor" style="margin-top:10px;"></div>
-
     <button onclick="validarMotor()">Validar</button>
-    <button onclick="window.location.href='historico_motor.html'">Ver Histórico Motores</button>
+    <button onclick="mostrarHistoricoMotor()">Ver Histórico Motores</button>
     <div id="resultadoMotor"></div>
+    <div id="historicoMotor" class="hidden"></div>
   </div>
 
   <script>
+    function logout() {
+      window.location.href = 'login.html';
+    }
     function mostrarSecao(sec) {
-      document.getElementById('secaoWin').classList.add('hidden');
-      document.getElementById('secaoMotor').classList.add('hidden');
-      if(sec==='win') document.getElementById('secaoWin').classList.remove('hidden');
-      if(sec==='motor') document.getElementById('secaoMotor').classList.remove('hidden');
+      ['secaoWin','secaoMotor','historicoWIN','historicoMotor'].forEach(id => document.getElementById(id).classList.add('hidden'));
+      if (sec === 'win') document.getElementById('secaoWin').classList.remove('hidden');
+      if (sec === 'motor') document.getElementById('secaoMotor').classList.remove('hidden');
     }
 
-    function salvarHistoricoWIN(win,val,msg){
-      const h=JSON.parse(localStorage.getItem('hisWIN')||'[]');
-      h.unshift({data:new Date().toLocaleString(),win,val,msg});
-      localStorage.setItem('hisWIN',JSON.stringify(h));
+    // Histórico WIN
+    function salvarHistoricoWIN(win, valido, msg) {
+      const h = JSON.parse(localStorage.getItem('hisWIN')||'[]');
+      h.unshift({ data: new Date().toLocaleString(), win, valido, msg });
+      localStorage.setItem('hisWIN', JSON.stringify(h));
+    }
+    function mostrarHistoricoWIN() {
+      const h = JSON.parse(localStorage.getItem('hisWIN')||'[]');
+      let t = '<table class="feedback-table"><tr><th>Data</th><th>WIN</th><th>Válido</th><th>Mensagem</th></tr>';
+      h.forEach(e => { t += `<tr><td>${e.data}</td><td>${e.win}</td><td>${e.valido}</td><td>${e.msg}</td></tr>`; });
+      t += '</table>';
+      const d = document.getElementById('historicoWIN'); d.innerHTML = t; d.classList.remove('hidden');
     }
 
     function validarNumeroWIN(win) {
-      win=win.replace(/-/g,'').trim().toUpperCase();
-      if(win.length!==14&&win.length!==16) return {valido:false,mensagem:'WIN inválido',campos:[]};
-      const pais=win.slice(0,2),fab=win.slice(2,5);
-      const serie=win.length===14?win.slice(5,10):win.slice(5,12);
-      const mes=win.length===14?win[10]:win[12];
-      const ano=win.length===14?win[11]:win[13];
-      const mod=win.length===14?win.slice(12):win.slice(14);
-      return {valido:true,mensagem:'WIN válido',campos:[
-        {nome:'País',valor:pais,interpretacao:pais},
-        {nome:'Fab',valor:fab,interpretacao:fab},
-        {nome:'Série',valor:serie,interpretacao:'Livre'},
-        {nome:'Mês',valor:mes,interpretacao:mes},
-        {nome:'Ano Prod',valor:ano,interpretacao:ano},
-        {nome:'Ano Mod',valor:mod,interpretacao:mod}
-      ]};
+      const r = { valido: false, mensagem: '', campos: [] };
+      win = win.replace(/-/g,'').trim().toUpperCase();
+      if (![14,16].includes(win.length)) {
+        r.mensagem = 'WIN inválido: deve ter 14 ou 16 caracteres.';
+        return r;
+      }
+      const pais = win.slice(0,2), fab = win.slice(2,5);
+      if (/\d/.test(pais) || /\d/.test(fab)) {
+        r.mensagem = 'Códigos país/fabricante inválidos.'; return r;
+      }
+      const serie = win.length===14? win.slice(5,10) : win.slice(5,12);
+      const mesL = win.length===14? win[10] : win[12];
+      const anoP = win.length===14? win[11] : win[13];
+      const anoM = win.length===14? win.slice(12) : win.slice(14);
+      r.valido = true; r.mensagem = 'WIN válido.';
+      r.campos = [
+        { nome:'País', valor: pais, interpretacao: pais },
+        { nome:'Fabricante', valor: fab, interpretacao: fab },
+        { nome:'Série', valor: serie, interpretacao: 'Livre' },
+        { nome:'Mês', valor: mesL, interpretacao: mesL },
+        { nome:'Ano Prod.', valor: anoP, interpretacao: anoP },
+        { nome:'Ano Mod.', valor: anoM, interpretacao: anoM }
+      ];
+      return r;
+    }
+    function validarWIN() {
+      const w = document.getElementById('winInput').value;
+      const res = validarNumeroWIN(w);
+      const div = document.getElementById('resultadoWIN');
+      if (!res.valido) { div.innerHTML = `<p class="invalido">${res.mensagem}</p>`; return; }
+      let out = `<p class="valido">${res.mensagem}</p><table class="feedback-table"><tr><th>Campo</th><th>Valor</th><th>Interpretação</th></tr>`;
+      res.campos.forEach(c => { out += `<tr><td>${c.nome}</td><td>${c.valor}</td><td>${c.interpretacao}</td></tr>`; });
+      out += '</table>'; div.innerHTML = out;
+      salvarHistoricoWIN(w, res.valido, res.mensagem);
     }
 
-    function validarWIN(){
-      const w=document.getElementById('winInput').value;
-      const r=validarNumeroWIN(w);
-      const d=document.getElementById('resultadoWIN');
-      if(!r.valido){d.innerHTML=`<p class="invalido">${r.mensagem}</p>`;return;}
-      let h=`<p class="valido">${r.mensagem}</p><table class="feedback-table"><tr><th>Campo</th><th>Valor</th><th>Interpretação</th></tr>`;
-      r.campos.forEach(c=>h+=`<tr><td>${c.nome}</td><td>${c.valor}</td><td>${c.interpretacao}</td></tr>`);
-      h+='</table>';d.innerHTML=h;
-      salvarHistoricoWIN(w,r.valido,r.mensagem);
-    }
-
-    function mostrarCamposMotor(){
-      const m=document.getElementById('marca').value;
-      let html='';
-      if(m==='Yamaha') html='<input id="campo1" placeholder="Ex: 6E5L123456"><br>';
-      else if(m==='Honda') html='Frame SN:<input id="campo1" placeholder="Frame"><br>Engine SN:<input id="campo2" placeholder="Engine"><br>';
-      else if(m==='MercuryIn') html='<input id="campo1" placeholder="SN Transom"><br>';
-      else if(m==='MercuryOut') html='<input id="campo1" placeholder="SN Outboard"><br>';
-      else if(m==='Suzuki') html='<input id="campo1" placeholder="Ex: DF1151234567"><br>';
-      document.getElementById('camposMotor').innerHTML=html;
-    }
-
-    const regras={
-      Yamaha:{regex:/^[A-Z0-9]{8,}$/},
-      Honda:{regex:/^.+$/},
-      MercuryIn:{regex:/^[0-9A-Z]{7,8}$/},
-      MercuryOut:{regex:/^[0-3][A-Z][0-9]{6}$/},
-      Suzuki:{regex:/^[A-Z]{2}[0-9]{2,3}[A-Z]*[0-9]{7}$/}
+    // Motor
+    const regrasMotor = {
+      Yamaha: { regex: /^[A-Z0-9]{8,}$/ },
+      Honda: { regex: /^[A-Z0-9]+$/ },
+      MercuryIn: { regex: /^[0-9A-Z]{7,8}$/ },
+      MercuryOut: { regex: /^[0-3][A-Z][0-9]{6}$/ },
+      Suzuki: { regex: /^[A-Z]{2}[0-9]{2,3}[A-Z]*[0-9]{7}$/ }
     };
-
-    function validarMotor(){
-      const m=document.getElementById('marca').value;
-      const c1=document.getElementById('campo1')?document.getElementById('campo1').value:'';
-      const c2=document.getElementById('campo2')?document.getElementById('campo2').value:'';
-      const r=regras[m];
-      let ok=false; let msg='';
-      if(m==='Honda') ok=r.regex.test(c1)&&r.regex.test(c2), msg=ok?'Honda ok':'Honda invalido';
-      else ok=r.regex.test(c1), msg=ok?m+' ok':m+' invalido';
-      document.getElementById('resultadoMotor').innerHTML=`<p class="${ok?'valido':'invalido'}">${msg}</p>`;
-      salvarHistoricoMotor(m,c1,c2,ok,msg);
+    const infoMotor = {
+      Yamaha: { campos:['Etiqueta'], descricao:'Formato: código+serial', notas:'Sem Jet Drive'},
+      Honda: { campos:['FrameSN','EngineSN'], descricao:'2 etiquetas (transom e bloco)', notas:'Devem coincidir'},
+      MercuryIn: { campos:['TransomSN'], descricao:'Inboard Transom SN', notas:'Obrigatório'},
+      MercuryOut: { campos:['OutboardSN'], descricao:'Outboard SN padrão', notas:'Prefixo 0-3'},
+      Suzuki: { campos:['Etiqueta'], descricao:'DF/DT + 7 dígitos', notas:'Verificar prefixo'}
+    };
+    function mostrarCamposMotor() {
+      const m = document.getElementById('marca').value;
+      let html = '';
+      if (m==='Yamaha' || m==='MercuryOut' || m==='Suzuki') {
+        html = '<input id="campo1" placeholder="Insere série"><br>';
+      } else if (m==='Honda') {
+        html = 'Frame SN:<input id="campo1" placeholder="Frame SN"><br>' +
+               'Engine SN:<input id="campo2" placeholder="Engine SN"><br>';
+      } else if (m==='MercuryIn') {
+        html = '<input id="campo1" placeholder="SN Transom"><br>';
+      }
+      document.getElementById('camposMotor').innerHTML = html;
     }
-
-    function salvarHistoricoMotor(m,c1,c2,val,msg){
-      const h=JSON.parse(localStorage.getItem('hisM')||'[]');
-      h.unshift({data:new Date().toLocaleString(),m,c1,c2,val,msg});
-      localStorage.setItem('hisM',JSON.stringify(h));
+    function salvarHistoricoMotor(m, c1, c2, val, msg) {
+      const h = JSON.parse(localStorage.getItem('hisMotor')||'[]');
+      h.unshift({ data:new Date().toLocaleString(), marca:m, campo1:c1, campo2:c2, valido:val, msg });
+      localStorage.setItem('hisMotor', JSON.stringify(h));
     }
-
-    mostrarSecao('win');
+    function mostrarHistoricoMotor() {
+      const h = JSON.parse(localStorage.getItem('hisMotor')||'[]');
+      let t = '<table class="feedback-table"><tr><th>Data</th><th>Marca</th><th>Campo1</th><th>Campo2</th><th>Válido</th><th>Msg</th></tr>';
+      h.forEach(e=>{ t += `<tr><td>${e.data}</td><td>${e.marca}</td><td>${e.campo1}</td><td>${e.campo2||''}</td><td>${e.valido}</td><td>${e.msg}</td></tr>`; });
+      t += '</table>';
+      const d = document.getElementById('historicoMotor'); d.innerHTML = t; d.classList.remove('hidden');
+    }
   </script>
 </body>
 </html>
