--- a/historico-motor.html
+++ b/historico-motor.html
@@ -5,14 +5,20 @@
   <meta charset="UTF-8">
   <title>Histórico Motores</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
+    body { font-family: Arial, sans-serif; font-size: 16px; padding: 20px; }
     table { border-collapse: collapse; width: 100%; margin-top: 20px; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; vertical-align: top; }
     .foto { width: 100px; height: 80px; object-fit: cover; border: 1px solid #999; }
     button, input[type="file"] { margin-top: 5px; }
   </style>
 </head>
-<body onload="carregarHistoricoMotor()">
+<body>
+
+<div style="display: flex; align-items: center; border-bottom: 2px solid #ccc; padding-bottom: 10px; margin-bottom: 20px;">
+  <img src="logo-pm.png" alt="Logotipo Polícia Marítima" style="height: 50px; margin-right: 15px;">
+  <h1 style="font-size: 1.8em; margin: 0;">Validador Marítimo</h1>
+</div>
+ onload="carregarHistoricoMotor()">
   <h2>Histórico de Validações de Motores</h2>
   <button onclick="voltar()">⬅ Voltar ao Validador</button>
   <div id="tabelaHistorico"></div>
@@ -24,17 +30,17 @@
 
     function carregarHistoricoMotor() {
       const historico = JSON.parse(localStorage.getItem('hisMotor') || '[]');
-      let html = '<table><tr><th>Data</th><th>Marca</th><th>Campo1</th><th>Campo2</th><th>Válido</th><th>Mensagem</th><th>Foto</th></tr>';
+      let html = '<table><tr><th style='font-weight:bold'>Data</th><th style='font-weight:bold'>Marca</th><th style='font-weight:bold'>Campo1</th><th style='font-weight:bold'>Campo2</th><th style='font-weight:bold'>Válido</th><th style='font-weight:bold'>Mensagem</th><th style='font-weight:bold'>Foto</th></tr>';
       historico.forEach((item, i) => {
         const foto = item.foto || 'placeholder.jpg';
         html += `<tr>
-          <td>${item.data}</td>
-          <td>${item.marca}</td>
-          <td>${item.campo1}</td>
-          <td>${item.campo2 || ''}</td>
-          <td>${item.valido}</td>
-          <td>${item.msg}</td>
-          <td>
+          <td style='font-size:15px'>${item.data}</td>
+          <td style='font-size:15px'>${item.marca}</td>
+          <td style='font-size:15px'>${item.campo1}</td>
+          <td style='font-size:15px'>${item.campo2 || ''}</td>
+          <td style='font-size:15px'>${item.valido}</td>
+          <td style='font-size:15px'>${item.msg}</td>
+          <td style='font-size:15px'>
             <img src="${foto}" class="foto" id="img${i}"><br>
             <input type="file" accept="image/*" onchange="guardarFoto(this, ${i})">
           </td>
