--- a/login.html
+++ b/login.html
@@ -1,56 +1,69 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Login - Validador Marítimo</title>
   <style>
     body {
+      font-family: Arial, sans-serif; font-size: 16px;
+      background-color: #f5f5f5;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background-color: #f0f0f0;
+      margin: 0;
     }
-    .login-box {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .login-container {
+      background-color: white;
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-align: center;
     }
-    input {
-      display: block;
-      margin: 1rem auto;
-      padding: 0.5rem;
-      width: 80%;
+    .login-container input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-size: 16px;
     }
-    button {
-      padding: 0.5rem 1rem;
+    .login-container button {
+      padding: 10px 20px;
+      font-size: 16px;
     }
-    #loginError {
-      color: red;
+    img.logo {
+      height: 60px;
+      margin-bottom: 20px;
+    }
+    label {
+      font-weight: bold;
     }
   </style>
+</head>
+<body>
+  <div class="login-container">
+    <img src="logo-pm.png" alt="Logotipo Polícia Marítima" class="logo">
+    <h2>Autenticação</h2>
+    <label for="username">Utilizador:</label><br>
+    <input type="text" id="username" placeholder="Nome de utilizador"><br>
+    <label for="password">Palavra-passe:</label><br>
+    <input type="password" id="password" placeholder="Palavra-passe"><br>
+    <button onclick="login()">Entrar</button>
+    <p id="mensagem" style="color:red; margin-top:10px;"></p>
+  </div>
+
   <script>
     function login() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-      if (user === "admin" && pass === "Admin2025") {
-        window.location.href = "validador.html";
+      const u = document.getElementById('username').value;
+      const p = document.getElementById('password').value;
+      if (u === 'admin' && p === 'Admin2025') {
+        window.location.href = 'validador.html';
       } else {
-        document.getElementById("loginError").innerText = "Credenciais inválidas";
+        document.getElementById('mensagem').textContent = 'Credenciais inválidas';
       }
     }
   </script>
-</head>
-<body>
-  <div class="login-box">
-    <h2>Login</h2>
-    <input type="text" id="username" placeholder="Utilizador">
-    <input type="password" id="password" placeholder="Palavra-passe">
-    <button onclick="login()">Entrar</button>
-    <p id="loginError"></p>
-  </div>
 </body>
 </html>
